3.5.0/_sources/gallery/pie_and_polar_charts/pie_demo2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pie_and_polar_charts/pie_demo2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pie_and_polar_charts_pie_demo2.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pie_and_polar_charts_pie_demo2.py:


=========
Pie Demo2
=========

Make a pie charts using `~.axes.Axes.pie`.

This example demonstrates some pie chart features like labels, varying size,
autolabeling the percentage, offsetting a slice and adding a shadow.

.. GENERATED FROM PYTHON SOURCE LINES 11-48

.. code-block:: default


    import matplotlib.pyplot as plt

    # Some data
    labels = 'Frogs', 'Hogs', 'Dogs', 'Logs'
    fracs = [15, 30, 45, 10]

    # Make figure and axes
    fig, axs = plt.subplots(2, 2)

    # A standard pie plot
    axs[0, 0].pie(fracs, labels=labels, autopct='%1.1f%%', shadow=True)

    # Shift the second slice using explode
    axs[0, 1].pie(fracs, labels=labels, autopct='%.0f%%', shadow=True,
                  explode=(0, 0.1, 0, 0))

    # Adapt radius and text size for a smaller pie
    patches, texts, autotexts = axs[1, 0].pie(fracs, labels=labels,
                                              autopct='%.0f%%',
                                              textprops={'size': 'smaller'},
                                              shadow=True, radius=0.5)
    # Make percent texts even smaller
    plt.setp(autotexts, size='x-small')
    autotexts[0].set_color('white')

    # Use a smaller explode and turn of the shadow for better visibility
    patches, texts, autotexts = axs[1, 1].pie(fracs, labels=labels,
                                              autopct='%.0f%%',
                                              textprops={'size': 'smaller'},
                                              shadow=False, radius=0.5,
                                              explode=(0, 0.05, 0, 0))
    plt.setp(autotexts, size='x-small')
    autotexts[0].set_color('white')

    plt.show()




.. image-sg:: /gallery/pie_and_polar_charts/images/sphx_glr_pie_demo2_001.png
   :alt: pie demo2
   :srcset: /gallery/pie_and_polar_charts/images/sphx_glr_pie_demo2_001.png, /gallery/pie_and_polar_charts/images/sphx_glr_pie_demo2_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 49-55

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.pie` / `matplotlib.pyplot.pie`


.. _sphx_glr_download_gallery_pie_and_polar_charts_pie_demo2.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: pie_demo2.py <pie_demo2.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: pie_demo2.ipynb <pie_demo2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
